# kknotify-server

./: .gitignore  Makefile  README.md  config.ml  kknotify-server.opam  kknotify.opam  kknotify_server.opam
script.example/: README.md  kknotify-server-start  kknotify-server-stop  kknotify-server.service
src/: jbuild  serv_up.ml
src/key-gen/: jbuild
src/key_gen/: jbuild  kknotify_key_gen.ml
src/kknotify/: KKNotify.ml  jbuild  kknotify.ml
src/server/: KKNotifyServer.ml  KKueue.ml  KKueue.mli  Shared.ml  SharedMap.ml  SharedQueue.ml  SharedSet.ml  jbuild  kknotify_server.ml
