opam-version: "2.0"
maintainer: "kkeundotnet@gmail.com"
authors: ["kkeundotnet"]
homepage: "https://github.com/kkeundotnet/kknotify_server"
bug-reports: "https://github.com/kkeundotnet/kknotify_server/issues"
dev-repo: "https://github.com/kkeundotnet/kknotify_server.git"

build: [
  ["jbuilder" "kkotify_server"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build & >= "1.0+beta14"}
]
