opam-version: "2.0"
maintainer: "kkeundotnet@gmail.com"
authors: ["kkeundotnet"]
homepage: "https://github.com/kkeundotnet/kknotify_server"
bug-reports: "https://github.com/kkeundotnet/kknotify_server/issues"
dev-repo: "https://github.com/kkeundotnet/kknotify_server.git"

build: [
  ["make" "build"]
]

depends: [
  "jbuilder" {build & >= "1.0+beta14"}
]
